--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ a{
     animation-duration: 200ms;
     animation-delay: 3s;
     animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+    -webkit-animation-delay: 3s;
+    -webkit-animation-duration: 200ms;
+    -webkit-animation-name: disappear;
     transform-origin: top;
     display: grid;
     place-items: center;
@@ -48,6 +52,7 @@ a{
     width: 120px;
     height: 120px;
     animation: infinity 2s linear infinite;
+    -webkit-animation: infinity 2s linear infinite;
 }
 
 @keyframes infinity {
@@ -132,6 +137,7 @@ header{
     border-radius: 100px;
     color: white;
     transition-duration: .25s;
+    -webkit-transition-duration: .25s;
 }
 
 #reservation .reservationbox a:hover{
@@ -269,6 +275,7 @@ header{
     right: 10px;
     margin-top: -24px;
     transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
     cursor: pointer;
 }
 
@@ -279,11 +286,13 @@ header{
     -webkit-background-clip: text;
     opacity: 0;
     transition: all 200ms ease-in-out;
+    -webkit-transition: all 200ms ease-in-out;
 }
 
 .restaurantsbox article .footerbox .heart .fa-solid:hover{
     opacity: 1;
     transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
     z-index: 1;
 }
 
